--- a/pkgs/loliyul/loliyul.cabal
+++ b/pkgs/loliyul/loliyul.cabal
@@ -12,14 +12,12 @@ maintainer:     zhicheng.miao@gmail.com
 tested-with:    GHC==9.6.1
 build-type:     Simple
 
-common optiongs
-    default-language: GHC2021
-    ghc-options:
-        -Wall
-        -Wno-name-shadowing
+common basic-options
+    default-language:     GHC2021
+    ghc-options:          -Wall
 
 library
-  import:           optiongs
+  import:           basic-options
   build-depends:    base >= 4.13 && < 666,
                     linear-base >= 0.3.1,
                     text >= 2.0.1,
@@ -38,18 +36,3 @@ library
                     LoliYul.Core.Linear
                     LoliYul.Core
                     LoliYul.CodeGen.PlantUML
-
-Test-Suite test-loliyul
-  import:           optiongs
-  type:             exitcode-stdio-1.0
-  build-depends:    base >= 4.13 && < 666,
-                    linear-base >= 0.3.1,
-                    text >= 2.0.1,
-                    linear-smc > 2.0.0,
-                    loliyul
-  mixins:           base hiding (Prelude),
-                    base (Prelude as ClassicPrelude),
-                    linear-base (Prelude.Linear as Prelude),
-                    linear-base
-  hs-source-dirs:   test
-  main-is:          Main.hs
