upgrade to linear-smc 2.2.3

--- a/pkgs/examples/loliyul-examples.cabal
+++ b/pkgs/examples/loliyul-examples.cabal
@@ -31,7 +31,7 @@ common yol-module-options
     build-depends:        base >= 4.13 && < 666,
                           linear-base >= 0.3.1,
                           text >= 2.0.1,
-                          linear-smc > 2.0.0,
+                          linear-smc >= 2.2.3,
                           loliyul
 
 library
