add some project documentations

--- a/pkgs/examples/loliyul-examples.cabal
+++ b/pkgs/examples/loliyul-examples.cabal
@@ -2,12 +2,12 @@ Cabal-Version:  3.0
 name:           loliyul-examples
 version:        0.1
 category:       control
-synopsis:       Examples built with LoliYul.
+synopsis:       Examples built with LoliYul
 license:        LGPL-3.0-or-later
 license-file:   LICENSE
-author:         Miao, ZhiCheng
+author:         Miao ZhiCheng
 maintainer:     zhicheng.miao@gmail.com
-tested-with:    GHC==9.6.1
+tested-with:    GHC==9.6.2
 build-type:     Simple
 
 
