split ERC20 example module out

--- a/pkgs/examples/loliyul-examples.cabal
+++ b/pkgs/examples/loliyul-examples.cabal
@@ -5,40 +5,32 @@ category:       control
 synopsis:       Examples built with LoliYul
 license:        LGPL-3.0-or-later
 license-file:   LICENSE
-author:         Miao ZhiCheng
+author:         Miao, ZhiCheng
 maintainer:     zhicheng.miao@gmail.com
 tested-with:    GHC==9.6.2
 build-type:     Simple
 
-
-common basic-options
+common yol-module-options
     default-language:     GHC2021
     ghc-options:          -Wall
-
-common loliyul-shared-deps
-    build-depends:        base >= 4.13 && < 666,
-                          bytestring >= 0.11,
-                          loliyul
-
-common loliyul-module-options
-    import:               loliyul-shared-deps
+                          -Wno-name-shadowing
     default-extensions:   LinearTypes
                           BlockArguments
                           ImpredicativeTypes
                           OverloadedStrings
                           UnicodeSyntax
-    ghc-options:          -Wno-name-shadowing
     mixins:               base hiding (Prelude),
                           base (Prelude as ClassicPrelude),
                           loliyul (LoliYul.Prelude as Prelude),
                           loliyul
-    build-depends:        linear-base >= 0.3.1,
+    build-depends:        base >= 4.13 && < 666,
+                          text >= 2.0.1,
+                          bytestring >= 0.11,
+                          loliyul,
+                          linear-base >= 0.3.1,
                           linear-smc >= 2.2.3
 
-common loliyul-yol-options
-    import:               loliyul-shared-deps
-    build-depends:        text >= 2.0.1
-
 library
-  import:           basic-options, loliyul-module-options, loliyul-yol-options
+  import:           yol-module-options
   exposed-modules:  Basic
+                    ERC20
