refactored into two packages: yul-dsl & yul-dsl-linear-smc

--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,5 @@
 packages:
     3rd-parties/linear-smc-2.2.3
-    hs-pkgs/loliyul
-    hs-pkgs/examples
+    hs-pkgs/yul-dsl
+    hs-pkgs/yul-dsl-linear-smc
+    yolc-examples
