--- a/templates/runyol.cabal
+++ b/templates/runyol.cabal
@@ -13,15 +13,16 @@ common yol-module-options
     ghc-options:          -Wall
                           -Wno-name-shadowing
     mixins:               base hiding (Prelude),
-                          base (Prelude as ClassicPrelude),
-                          loliyul (LoliYul.Prelude as Prelude),
-                          loliyul
+                          base (Prelude as BasePrelude),
+                          yul-dsl-linear-smc (Prelude.YulDSL as Prelude),
+                          yul-dsl-linear-smc
     build-depends:        base >= 4.13 && < 666,
                           bytestring >= 0.11,
                           text >= 2.0.2,
                           linear-base >= 0.3.1,
                           linear-smc >= 2.2.3,
-                          loliyul
+                          yul-dsl-linear-smc,
+                          yul-dsl
 
 executable runyol
   import:           yol-module-options
