rename to YulCat, and introduces YulCode and YulObject

--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -39,7 +39,8 @@ library
                     YulDSL.Core.ContractABI.Serialization
                     YulDSL.Core.ContractABI
                     YulDSL.Core.Coerce
-                    YulDSL.Core.YulDSL
+                    YulDSL.Core.YulCat
+                    YulDSL.Core.YulObject
                     YulDSL.Core
                     YulDSL.Eval
                     YulDSL.CodeGen.PlantUML
