--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -33,7 +33,8 @@ library
                     -- TODO remove cereal dependency
                     cereal >= 0.5.8,
                     constraints >= 0.13,
-                    containers >= 0.6.7
+                    containers >= 0.6.7,
+                    mtl >= 2.3.1
   exposed-modules:  YulDSL.Core.ContractABI.Internal
                     YulDSL.Core.ContractABI.Types
                     YulDSL.Core.ContractABI.Serialization
@@ -45,6 +46,7 @@ library
                     YulDSL.Core
                     YulDSL.Eval
                     YulDSL.CodeGen.PlantUML
+                    YulDSL.CodeGen.Yul
 
 Test-Suite test-yul-dsl
   import:           basic-options
