WIP Multi-style functions syntax

--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -39,8 +39,8 @@ library
                     YulDSL.Core.ContractABI.Types
                     YulDSL.Core.ContractABI.Serialization
                     YulDSL.Core.ContractABI.ABIType
+                    YulDSL.Core.ContractABI.Coerce
                     YulDSL.Core.ContractABI
-                    YulDSL.Core.Coerce
                     YulDSL.Core.YulCat
                     YulDSL.Core.YulObject
                     YulDSL.Core
