--- a/templates/runyol.cabal
+++ b/templates/runyol.cabal
@@ -13,8 +13,8 @@ common yol-module-options
     ghc-options:          -Wall
                           -Wno-name-shadowing
     mixins:               base hiding (Prelude),
-                          base (Prelude as BasePrelude),
-                          yul-dsl-linear-smc (Prelude.YulDSL as Prelude),
+                          base (Prelude as Prelude.Base),
+                          yul-dsl-linear-smc (Prelude.YulDSL.LinearSMC as Prelude),
                           yul-dsl-linear-smc
     build-depends:        base >= 4.13 && < 666,
                           bytestring >= 0.11,
