--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -36,6 +36,7 @@ library
                     containers >= 0.6.7,
                     mtl >= 2.3.1
   exposed-modules:  Data.NProducts
+                    Data.NTuple
                     YulDSL.Core.ContractABI.Types
                     YulDSL.Core.ContractABI.Coerce
                     YulDSL.Core.ContractABI
