yolc project mode WIP

--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -46,6 +46,7 @@ library
                     YulDSL.Eval
                     YulDSL.CodeGen.PlantUML
                     YulDSL.CodeGen.Yul
+                    YOLC.Manifest
 
 Test-Suite test-yul-dsl
   import:           basic-options
