--- a/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
+++ b/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
@@ -1,7 +1,7 @@
 Cabal-Version:  3.0
 name:           yul-dsl-linear-smc
-version:        0.1
-category:       control
+version:        0.1.0.0
+category:       Language
 synopsis:       Programming Solidity/Yul in linear-typed functions
 license:        LGPL-3.0-or-later
 license-file:   LICENSE
