YOLC: singleton contract and single file output mode tested

--- a/examples/demo/yol-demo.cabal
+++ b/examples/demo/yol-demo.cabal
@@ -37,3 +37,4 @@ common yol-module-options
 library
   import:           yol-module-options
   exposed-modules:  Project Basic ERC20
+  hs-source-dirs:   src
