WIP selector support

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -57,7 +57,8 @@
 # - ignore: {name: Use let}
 # - ignore: {name: Use const, within: SpecialModule} # Only within certain modules
 
-ignore: {name: "Use bimap"} # TODO, use linear-base
+- ignore: {name: "Use camelCase"}
+- ignore: {name: "Use bimap"} # TODO, use linear-base?
 
 # Define some custom infix operators
 # - fixity: infixr 3 ~^#^~
