--- a/hs-pkgs/yol-suite/yol-suite.cabal
+++ b/hs-pkgs/yol-suite/yol-suite.cabal
@@ -16,7 +16,7 @@ license:         LGPL-3.0-only
 license-file:    LICENSE
 author:          Miao, ZhiCheng
 maintainer:      zhicheng.miao@gmail.com
-tested-with:     GHC==9.6.2
+tested-with:     GHC==9.10.1
 copyright:       (c) 2023 Miao, ZhiCheng
 build-type:      Simple
 extra-doc-files: CHANGELOG.md
@@ -24,7 +24,7 @@ extra-doc-files: CHANGELOG.md
 common warnings
   default-language: GHC2021
   ghc-options:      -Wall
-  build-depends:    base ^>=4.18.0.0 && < 666
+  build-depends:    base >=4.20.0.0 && < 666
 
 library
   import:           warnings
