--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -18,14 +18,14 @@ license-file:   LICENSE
 author:         Miao, ZhiCheng
 maintainer:     zhicheng.miao@gmail.com
 copyright:      (c) 2023 Miao, ZhiCheng
-tested-with:    GHC==9.6.2
+tested-with:    GHC==9.10.1
 build-type:     Simple
 -- extra-doc-files:    CHANGELOG.md
 
 common basic-options
   default-language: GHC2021
   ghc-options:      -Wall
-  build-depends:    base ^>=4.18.0.0 && < 666
+  build-depends:    base >=4.20.0.0 && < 666
 
 library
   import:           basic-options
